WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181859
[Win] Compile error: 'WebKitQuartzCoreAdditionsBase.h' not found.
https://bugs.webkit.org/show_bug.cgi?id=181859
Summary
[Win] Compile error: 'WebKitQuartzCoreAdditionsBase.h' not found.
Per Arne Vollan
Reported
2018-01-19 09:01:10 PST
webkit\source\webkitlegacy\win\webkitquartzcoreadditions\api\WKCACFView.h(29): fatal error C1083: Cannot open include file: 'WebKitQuartzCoreAdditions/WebKitQuartzCoreAdditionsBase.h': No such file or directory
Attachments
Patch
(2.32 KB, patch)
2018-01-19 09:10 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-01-19 09:05:33 PST
<
rdar://problem/36659886
>
Per Arne Vollan
Comment 2
2018-01-19 09:10:59 PST
Created
attachment 331737
[details]
Patch
Per Arne Vollan
Comment 3
2018-01-19 09:27:47 PST
Comment on
attachment 331737
[details]
Patch Thanks for reviewing!
WebKit Commit Bot
Comment 4
2018-01-19 09:58:19 PST
Comment on
attachment 331737
[details]
Patch Clearing flags on attachment: 331737 Committed
r227209
: <
https://trac.webkit.org/changeset/227209
>
WebKit Commit Bot
Comment 5
2018-01-19 09:58:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug