[Win] Compile error: 'WebKitQuartzCoreAdditionsBase.h' not found. https://bugs.webkit.org/show_bug.cgi?id=181859 <rdar://problem/36659886>

Reviewed by Alex Christensen.

Use local include patch.

* WebKitQuartzCoreAdditions/API/WKCACFImage.h:
* WebKitQuartzCoreAdditions/API/WKCACFView.h:
* WebKitQuartzCoreAdditions/API/WKCACFViewPrivate.h:


Canonical link: https://commits.webkit.org/197685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227209 268f45cc-cd09-0410-ab3c-d52691b4dbfc